acvus-mir-test/tests/snapshots/short_circuit__a_compound_loop_condition_branches_inside_the_head.snap
---
source: acvus-mir-test/tests/short_circuit.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @a
     1 |   r1 = fetch @max
     3 |   jump L0(0 (r2))
     4 | L0(r3: i64):
     5 |   r4 = r3 < r1
     6 |   if r4 -> L5(r0) else L4 join L5
     7 | L4:
     9 |   jump L5(false (r5))
    10 | L5(r6: Bool):
    11 |   jump_if r6 then L1 else L2
    12 | L1:
    14 |   r7 = r3 + 1 (r8)
    15 |   jump L0(r7)
    16 | L2:
    17 |   commit @a = r0
    18 |   commit @max = r1
    19 |   return r3

    ; r0 (@a) : Bool
    ; r1 (@max) : i64
    ; r2 (v5) : i64
    ; r3 (v22) : i64
    ; r4 (v9) : Bool
    ; r5 (v12) : Bool
    ; r6 (v10) : Bool
    ; r7 (v15) : i64
    ; r8 (v14) : i64
    ; r9 (@a) : Bool
    ; r10 (@max) : i64
    ; r11 (n) : i64
    ; r12 (v25) : i64
    ; r13 (v17) : Bool
    ; r14 (v26) : Bool
    ; r15 (v18) : i64
    ; r16 (n) : i64
    ; r17 (v21) : i64
    ; r18 (n) : i64
    ; r19 (v20) : i64
    ; r20 (@a) : Bool
    ; r21 (v23) : i64
    ; r22 (v24) : Bool
    ; r23 (n) : i64
    ; r24 (v27) : i64
    ; r25 (@max) : i64
    ; r26 (v19) : Bool
