acvus-mir-test/tests/snapshots/short_circuit__or_lowers_to_a_diamond.snap
---
source: acvus-mir-test/tests/short_circuit.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @a
     1 |   r1 = fetch @b
     2 |   if r0 -> L1 else L2(r1) join L2
     3 | L1:
     5 |   jump L2(true (r2))
     6 | L2(r3: Bool):
     7 |   commit @a = r0
     8 |   commit @b = r1
     9 |   return r3

    ; r0 (@a) : Bool
    ; r1 (@b) : Bool
    ; r2 (v8) : Bool
    ; r3 (v6) : Bool
    ; r4 (@b) : Bool
    ; r5 (v11) : Bool
    ; r6 (v14) : Bool
    ; r7 (v17) : Bool
    ; r8 (c) : Bool
    ; r9 (@a) : Bool
    ; r10 (v12) : Bool
    ; r11 (v15) : Bool
    ; r12 (@b) : Bool
    ; r13 (c) : Bool
    ; r14 (v13) : Bool
    ; r15 (@a) : Bool
    ; r16 (v16) : Bool
